--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" href="data:" />
     <meta property="og:type" content="website">
-    <meta property="og:url" content="sitiosquepagan.com/pre-sale">
+    <meta property="og:url" content="sitiosquepagan.com">
     <meta property="og:title" content="MVL">
     <meta property="og:description" content="Metodo Probado">
     <meta property="og:image" content="https://img.imageboss.me/atm/cdn/u/ur1WI0umAWOL3WJ8DhzthXhn9Gu1/l/tAFrqJ6999145.png">
