--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" href="data:" />
     <meta property="og:type" content="website">
-    <meta property="og:url" content="sitiosquepagan.com">
+    <meta property="og:url" content="sitiosquepagan.com/pre-sale">
     <meta property="og:title" content="MVL">
     <meta property="og:description" content="Metodo Probado">
     <meta property="og:image" content="https://img.imageboss.me/atm/cdn/u/ur1WI0umAWOL3WJ8DhzthXhn9Gu1/l/tAFrqJ6999145.png">
@@ -206,7 +206,7 @@
             </style>
             <div class="description-1658935819780REPtPH-element ">
                 <h3>
-                    Se liberaron 315 licencias para el día de hoy. Dale click en&nbsp;<span style="color:#eeff00"><a href="sitiosquepagan.com">"Continuar"</a></span>&nbsp; y mira el corto&nbsp;<span style="color:#eeff00">tutorial de 5 min</span>&nbsp;hasta el final y siga el&nbsp;<span style="color:#eeff00">paso a paso</span>&nbsp;para acceder a la aplicación.
+                    Se liberaron 315 licencias para el día de hoy. Dale click en&nbsp;<span style="color:#eeff00">"Continuar"</span>&nbsp; y mira el corto&nbsp;<span style="color:#eeff00">tutorial de 5 min</span>&nbsp;hasta el final y siga el&nbsp;<span style="color:#eeff00">paso a paso</span>&nbsp;para acceder a la aplicación.
                 </h3>
             </div>
         </div>
@@ -253,9 +253,9 @@
                     }
                 }
             </style>
-            <p class="cryptoButton-16589244172223lPn8M-element pulsing_16589244172223lPn8M">
+            <p class="cryptoButton-16589244172223lPn8M-element pulsing_16589244172223lPn8M"><a href="sitiosquepagan.com">
                 CONTINUAR ➜
-            </p>
+            </a></p>
         </div>
     </div>
 </div>
