--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     }
                 }
             </style>
-            <p class="cryptoButton-16589244172223lPn8M-element pulsing_16589244172223lPn8M"><a href="sitiosquepagan.com">
+            <p class="cryptoButton-16589244172223lPn8M-element pulsing_16589244172223lPn8M"><a href="https://sitiosquepagan.com">
                 CONTINUAR ➜
             </a></p>
         </div>
